# Manipur-Edu-ICP

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
scripts/: did.sh
src/manipur_edu_backend/: Cargo.toml  manipur_edu_backend.did
src/manipur_edu_backend/src/: admin.rs  canister.rs  certificate.rs  institute.rs  lib.rs  scholarship.rs  student.rs  studentresult.rs  testing.rs  types.rs
src/manipur_edu_frontend/Constants/: appConstants.jsx  reduxConstants.jsx
src/manipur_edu_frontend/Redux/: Store.jsx  store.jsx
src/manipur_edu_frontend/Redux/Action/: WalletActions.jsx  idAction.jsx  index.jsx  studentIdAction.jsx  toggleActions.jsx
src/manipur_edu_frontend/Redux/Reducers/: WalletReducer.jsx  allInstitutesReducer.jsx  allScholarshipsReducer.jsx  allStudentsReducer.jsx  boolReducer.jsx  idReducer.jsx  index.jsx  instituteDetailsReducer.jsx  notificationOpenCloseDropDownReducer.jsx  profileOpenCloseDropDownReducer.jsx  scholarshipDetailsReducer.jsx  studentDetailsReducer.jsx  studentIdReducer.jsx
src/manipur_edu_frontend/assets/: main.css
src/manipur_edu_frontend/error/: ErrorPage.jsx
src/manipur_edu_frontend/src/: App.jsx  UserBasedRoute.jsx  index.html  index.jsx  routes.jsx
src/manipur_edu_frontend/src/Error/: Error.jsx
src/manipur_edu_frontend/src/components/: ApproveProfileModel.jsx  BackgroudPage.jsx  Button.jsx  Card.jsx  CompressedImage.jsx  (+8 more)
src/manipur_edu_image_store/: Cargo.toml  manipur_edu_image_store.did
src/manipur_edu_image_store/src/: lib.rs
(+150 files in other folders)
