[package]
name = "manipur_edu_image_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
candid = "0.10.2"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.6.0" # Feel free to remove this dependency if you don't need timers


sha2 = "0.10.8"
regex = "1.10.3"
chrono = {version= "0.4.33", default-features = false}
ic-stable-structures = "0.6.2"
serde_cbor = "0.11.2"
serde_json = "1.0.113"
candid-extractor = "0.1.2"

